--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@ Temporary Items
 
 
 # End of https://www.gitignore.io/api/macos
+
+# Created by https://www.gitignore.io/api/vim
+
+### Vim ###
+# swap
+.sw[a-p]
+.*.sw[a-p]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
+
+
+# End of https://www.gitignore.io/api/vim
